Thu Jun 10 17:46:10 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Utils.cpp:
        * DnC/Config_Handlers/TPD_Handler.cpp:

          Fixe memory leaks pertaining to ACE_TString making copies of
          dynamically allocated memory. The memory supplied to ACE_TString
          has to be deleted! Fixed memory for these.

Thu Jun 10 17:44:57 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Process_Element.cpp:
        * DnC/Config_Handlers/Property_Handler.cpp:
        * DnC/Config_Handlers/RS_Handler.cpp:
        * DnC/Config_Handlers/Requirement_Handler.cpp:
        * DnC/Config_Handlers/SP_Handler.cpp:

          More memory leaks fixes.

Thu Jun 10 17:27:35 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Utils.cpp:

          Fixed some memory leaks as well!!

Thu Jun 10 17:26:25 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Process_Element.cpp:

          Fixed memory leaks.

Thu Jun 10 14:06:03 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Servant_Impl_T.cpp:
        * DnC/ciao/Servant_Impl_T.cpp:

          Modified code that passed _var.out() to ACE_NEW_RETURN,
          since sometimes on Windows platforms, for whatever
          reason Var_Base::out() will be called after the
          allocation, effectively cancelling it out. It is
          alwas safe to declare a pointer, pass it to ACE_NEW_*
          and then assign it to a _var, so that is what is
          done now in get_all_facets() and get_all_consumers().

Thu Jun 10 10:17:00 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/ciao/Container_Base.h:
	  Followed up a Jeff's Change in the old ciao.

	* DnC/ExecutionManager/ExecutionManager_Impl.cpp:
	* DnC/ExecutionManager/ExecutionManager_Impl.h:
	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.h:
	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.cpp: