@@ -29,11 +29,11 @@ void CompImplDesc_Handler::process_ComponentImplementationDescription
 (::Deployment::ComponentImplementationDescription &cid)
 {
   //this->iter_->nextNode();
-  ACE_TString root_node_name;
 
-  root_node_name = XMLString::transcode
+  const char* root_node_name_ch = XMLString::transcode
     (this->doc_->getDocumentElement ()->getNodeName ());
-
+  ACE_TString root_node_name (root_node_name_ch);
+  XMLString::release (root_node_name_ch);
 
   for (DOMNode* node = this->iter_->nextNode();
        node != 0;
